--- a/sub.properties
+++ b/sub.properties
@@ -1,14 +1,14 @@
 # Basic information.
 ### TODO: fill this in
 group=Kaleido-subs
-jp_title=
-shorthand=${jp_title}
-episodes={01..24}
+jp_title=Blue Archive the Animation
+shorthand=BlueArchive
+episodes={01..13}
 
 # Codec info
-format=BD 1080p
+format=WEB 1080p
 vcodec=HEVC x265 10-bit
-acodec=Opus 5.1 2.0
+acodec=E-AC3 2.0
 codec_info=${format} ${vcodec} ${acodec}
 
 
@@ -42,10 +42,8 @@ common_fonts=common/fonts
 
 # OP/ED scripts and episode numbers
 ## Common OP/EDs
-{01..12}.OP_name=NCOP1
-{13..24}.OP_name=NCOP2
-{01..12}.ED_name=NCED1
-{13..24}.ED_name=NCED2
+{01..13}.OP_name=NCOP1
+{02..13}.ED_name=NCED1
 
 OP=${OP_name}/${shorthand} ${OP_name}.ass
 ED=${ED_name}/${shorthand} ${ED_name}.ass
@@ -56,7 +54,7 @@ edfonts=${ED_name}/fonts
 
 
 # Creditless
-ncs=NCOP1v{1..2}|NCOP{2..3}|NCED{1..3}
+ncs=NCOP1|NCED1
 
 ncsubs=${episode}/${shorthand}_${episode}.ass
 ncpremux=${episode}/${shorthand}_${episode} (Premux).mkv
