[build] 01 indeed has no ED...

--- a/sub.properties
+++ b/sub.properties
@@ -46,7 +46,7 @@ common_fonts=common/fonts
 {02..13}.ED_name=NCED1
 
 OP=${OP_name}/${shorthand} ${OP_name}.ass
-ED=${ED_name}/${shorthand} ${ED_name}.ass
+{02..13}.ED=${ED_name}/${shorthand} ${ED_name}.ass
 
 ## Fonts
 opfonts=${OP_name}/fonts
