build: Use TVDB naming for premux

--- a/sub.properties
+++ b/sub.properties
@@ -20,7 +20,7 @@ group_hono=Honorifics [${group}]
 # Show-related (output) files
 title=[${group}] ${jp_title} - ${tvdb} (${episode}) - (${codec_info})
 tvdb=S${season}E${epnum}
-premux=${episode}/* - ${episode}* (Premux) [*].mkv
+premux=${episode}/* - ${tvdb}* (Premux) [*].mkv
 
 muxdir=[${group}] ${jp_title} (${codec_info})
 muxout=${muxdir}/$title [$mux.crc].mkv
