01: Set new NCOP ASS location

--- a/sub.properties
+++ b/sub.properties
@@ -43,10 +43,11 @@ common_fonts=common/fonts
 # OP/ED scripts and episode numbers
 ## Common OP/EDs
 {01..13}.OP_name=NCOP1
-{02..13}.ED_name=NCED1
+ED_name=NCED1
 
-OP=${OP_name}/${shorthand} ${OP_name}.ass
-{02..13}.ED=${ED_name}/${shorthand} ${ED_name}.ass
+01.OP=${episode}/${shorthand} - ${OP_name}.ass
+{02..13}.OP=${OP_name}/${shorthand} ${OP_name}.ass
+ED=${ED_name}/${shorthand} ${ED_name}.ass
 
 ## Fonts
 opfonts=${OP_name}/fonts
