01: Copy OP file to 01 directory

--- a/sub.properties
+++ b/sub.properties
@@ -45,7 +45,7 @@ common_fonts=common/fonts
 {01..13}.OP_name=NCOP1
 ED_name=NCED1
 
-01.OP=${episode}/${shorthand} - ${OP_name}.ass
+01.OP=${episode}/${shorthand} 01 - OP.ass
 {02..13}.OP=${OP_name}/${shorthand} ${OP_name}.ass
 ED=${ED_name}/${shorthand} ${ED_name}.ass
 
