build: Remove extra episode number from title

--- a/sub.properties
+++ b/sub.properties
@@ -18,7 +18,7 @@ group_hono=Honorifics [${group}]
 
 
 # Show-related (output) files
-title=[${group}] ${jp_title} - ${tvdb} (${episode}) - (${codec_info})
+title=[${group}] ${jp_title} - ${tvdb} - (${codec_info})
 tvdb=S${season}E${epnum}
 premux=${episode}/* - ${tvdb}* (Premux) [*].mkv
 
