--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@
 /.gradle/*
 /build/*
 
+# Some random IDE dirs
+/.idea/*
+
 # Ignoring merged .ass files, since we want those to be generated locally always
 *Merged*.ass
 
