Update sub.properties for ep 10 ED

--- a/sub.properties
+++ b/sub.properties
@@ -47,7 +47,7 @@ ED_name=NCED1
 
 01.OP=${episode}/${shorthand} 01 - OP.ass
 {02..13}.OP=${OP_name}/${shorthand} ${OP_name}.ass
-{02..13}.ED=${ED_name}/${shorthand} ${ED_name}.ass
+{02..9,11..13}.ED=${ED_name}/${shorthand} ${ED_name}.ass
 
 ## Fonts
 opfonts=${OP_name}/fonts
