--- a/sub.properties
+++ b/sub.properties
@@ -42,12 +42,12 @@ common_fonts=common/fonts
 
 # OP/ED scripts and episode numbers
 ## Common OP/EDs
-{01..12}.OP_name=NCOP1
+OP_name=NCOP1
 ED_name=NCED1
 
 01.OP=${episode}/${shorthand} 01 - OP.ass
-{02..12}.OP=${OP_name}/${shorthand} ${OP_name}.ass
-{02..9,11..12}.ED=${ED_name}/${shorthand} ${ED_name}.ass
+{02..11}.OP=${OP_name}/${shorthand} ${OP_name}.ass
+{02..9,11}.ED=${ED_name}/${shorthand} ${ED_name}.ass
 
 ## Fonts
 opfonts=${OP_name}/fonts
