Update build properties

--- a/sub.properties
+++ b/sub.properties
@@ -1,30 +1,39 @@
 # Basic information.
-### TODO: fill this in
 group=Kaleido-subs
 jp_title=Blue Archive the Animation
 shorthand=BlueArchive
 episodes={01..12}
 
+
 # Codec info
-format=WEB 1080p
+format=BD 1080p
 vcodec=HEVC x265 10-bit
-acodec=E-AC3 2.0
+acodec=Opus 2.0
 codec_info=${format} ${vcodec} ${acodec}
 
 
-# Names for individual subtitle tracks and the like
-group_reg=Full Subtitles [${group}]
-group_hono=Honorifics [${group}]
+# Specific names for individual tracks. Should match codec info.
+vtrack=x265
+atrack=Opus 2.0 @ 192 kb/s
+strack_reg=Full Subtitles [${group}]
+strack_hono=Honorifics [${group}]
 
 
 # Show-related (output) files
 title=[${group}] ${jp_title} - ${tvdb} - (${codec_info})
-tvdb=S${season}E${epnum}
-premux=${episode}/* - ${tvdb}* (Premux) [*].mkv
+premux=${episode}/*(Premux)*.mkv
 
 muxdir=[${group}] ${jp_title} (${codec_info})
 muxout=${muxdir}/$title [$mux.crc].mkv
-ncmuxout=${muxdir}/Creditless/${muxout}
+ncmuxout=${muxdir}/Extras/${title} [$mux.crc].mkv
+
+# Misc changes to show-related files.
+{SP*}.title=[${group}] ${jp_title} - ${epabs} (${episode}) - ${tvdb} - (${format} ${vcodec} ${acodec})
+{NC*}.title=[${group}] ${jp_title} - ${episode} - (${codec_info})
+
+
+# Episodes and other basic features.
+episodes={01..12}
 
 
 # Individual script components
@@ -32,10 +41,11 @@ dialogue=${episode}/${shorthand} ${episode} - Dialogue.ass
 extra=${episode}/${shorthand} ${episode} - Extra.ass
 TS=${episode}/${shorthand} ${episode} - TS*.ass
 INS=${episode}/${shorthand} ${episode} - INS*.ass
-chapters=${dialogue}
+render_warning=common/warning.ass
 
 ## Per-episode fonts, e.g. typesetting
 fonts=${episode}/fonts
+
 ## Common fonts, e.g. dialogue and titles
 common_fonts=common/fonts
 
@@ -45,7 +55,7 @@ common_fonts=common/fonts
 OP_name=NCOP1
 ED_name=NCED1
 
-01.OP=${episode}/${shorthand} 01 - OP.ass
+01.OP=${episode}/${shorthand} ${episode} - OP.ass
 {02..11}.OP=${OP_name}/${shorthand} ${OP_name}.ass
 {02..9,11}.ED=${ED_name}/${shorthand} ${ED_name}.ass
 
@@ -57,12 +67,14 @@ edfonts=${ED_name}/fonts
 # Creditless
 ncs=NCOP1|NCED1
 
-ncsubs=${episode}/${shorthand}_${episode}.ass
-ncpremux=${episode}/${shorthand}_${episode} (Premux).mkv
+ncsubs=${episode}/${shorthand} ${episode}.ass
+ncpremux=${episode}/* - ${episode}* (Premux) [*].mkv
 ncfonts=${episode}/fonts
 
 
-# Episode numbers following TVDB
-## Left at the end, as these can potentially get very long.
+## Episode numbers following TVDB.
+### Moved to the bottom because it's very spammy.
+tvdb=S${season}E${epnum}
+
 season=01
 epnum=${episode}
