Add check for prosub inclusion
Currently broken. Must be fixed.

--- a/sub.properties
+++ b/sub.properties
@@ -17,6 +17,7 @@ vtrack=x265
 atrack=Opus 2.0 @ 192 kb/s
 strack_reg=Full Subtitles [${group}]
 strack_hono=Honorifics [${group}]
+strack_pro="Official Translation (Blu-ray) [Nexon]"
 
 
 # Show-related (output) files
