Add season to muxdir

--- a/sub.properties
+++ b/sub.properties
@@ -24,7 +24,7 @@ strack_pro="Official Translation (Blu-ray) [Nexon]"
 title=[${group}] ${jp_title} - ${tvdb} - (${codec_info})
 premux=${episode}/*(Premux)*.mkv
 
-muxdir=[${group}] ${jp_title} (${codec_info})
+muxdir=[${group}] ${jp_title} S${season} (${codec_info})
 muxout=${muxdir}/$title [$mux.crc].mkv
 ncmuxout=${muxdir}/Extras/${title} [$mux.crc].mkv
 
