Mux in Nexon translation

--- a/sub.properties
+++ b/sub.properties
@@ -17,12 +17,13 @@ vtrack=x265
 atrack=Opus 2.0 @ 192 kb/s
 strack_reg=Full Subtitles [${group}]
 strack_hono=Honorifics [${group}]
-strack_pro="Official Translation (Blu-ray) [Nexon]"
+strack_pro=Official Translation (Blu-ray) [Nexon]
 
 
 # Show-related (output) files
 title=[${group}] ${jp_title} - ${tvdb} - (${codec_info})
 premux=${episode}/*(Premux)*.mkv
+prosubs=${episode}/*(Nexon)*.srt
 
 muxdir=[${group}] ${jp_title} S${season} (${codec_info})
 muxout=${muxdir}/$title [$mux.crc].mkv
